force-app/main/default/objects/TriggerSetupClasses__c/TriggerSetupClasses__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The classes that are executed as part of each trigger execution</description>
    <label>Trigger Setup Classes</label>
</CustomObject>