force-app/main/default/objects/TriggerSetupClasses__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the class that the trigger will run.</inlineHelpText>
    <label>Class Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>