force-app/main/default/objects/TriggerSetupClasses__c/fields/InterfaceVersion__c.field-meta.xml
<CustomField>
    <fullName>InterfaceVersion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which version of the interface are we using for this class? Blank or A is the first iteration.</inlineHelpText>
    <label>Interface Version</label>
    <length>1</length>
    <type>Text</type>
</CustomField>