force-app/main/default/objects/TriggerSetupClasses__c/fields/IsAfter__c.field-meta.xml
<CustomField>
    <fullName>IsAfter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this run in the after trigger?</inlineHelpText>
    <label>IsAfter?</label>
    <type>Checkbox</type>
</CustomField>