force-app/main/default/objects/TriggerSetupClasses__c/fields/IsBefore__c.field-meta.xml
<CustomField>
    <fullName>IsBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this run in the before trigger?</inlineHelpText>
    <label>IsBefore?</label>
    <type>Checkbox</type>
</CustomField>