force-app/main/default/objects/TriggerSetupClasses__c/fields/IsDeleteAfter__c.field-meta.xml
<CustomField>
    <fullName>IsDeleteAfter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this for the delete after trigger?</inlineHelpText>
    <label>IsDeleteAfter?</label>
    <type>Checkbox</type>
</CustomField>