force-app/main/default/objects/TriggerSetupClasses__c/fields/IsDeleteBefore__c.field-meta.xml
<CustomField>
    <fullName>IsDeleteBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this for the Delete Before trigger?</inlineHelpText>
    <label>IsDeleteBefore?</label>
    <type>Checkbox</type>
</CustomField>