force-app/main/default/objects/TriggerSetupClasses__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <inlineHelpText>The order of execution for the classes</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>