force-app/main/default/objects/TriggerSetupClasses__c/fields/TriggerKey__c.field-meta.xml
<CustomField>
    <fullName>TriggerKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the trigger (from the Trigger Setup custom setting)</inlineHelpText>
    <label>Trigger Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>