force-app/main/default/objects/TriggerSetupClasses__c/listViews/Contact_Triggers.listView-meta.xml
<ListView>
    <fullName>Contact_Triggers</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ClassName__c</columns>
    <columns>TriggerKey__c</columns>
    <columns>SortOrder__c</columns>
    <columns>IsAfter__c</columns>
    <columns>IsBefore__c</columns>
    <columns>InterfaceVersion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TriggerKey__c</field>
        <operation>startsWith</operation>
        <value>Contact</value>
    </filters>
    <label>Contact Triggers</label>
</ListView>