force-app/main/default/objects/TriggerSetupClasses__c/listViews/DemandGen_Trigger.listView-meta.xml
<ListView>
    <fullName>DemandGen_Trigger</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ClassName__c</columns>
    <columns>TriggerKey__c</columns>
    <columns>SortOrder__c</columns>
    <columns>IsAfter__c</columns>
    <columns>IsBefore__c</columns>
    <columns>InterfaceVersion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>startsWith</operation>
        <value>DG_</value>
    </filters>
    <label>DemandGen Trigger</label>
</ListView>