force-app/main/default/objects/TriggerSetupClasses__c/listViews/TimeZoneHelper.listView-meta.xml
<ListView>
    <fullName>TimeZoneHelper</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ClassName__c</columns>
    <columns>TriggerKey__c</columns>
    <columns>SortOrder__c</columns>
    <columns>IsBefore__c</columns>
    <columns>IsAfter__c</columns>
    <columns>IsDeleteBefore__c</columns>
    <columns>IsDeleteAfter__c</columns>
    <columns>InterfaceVersion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>TimeZoneHelper</value>
    </filters>
    <label>TimeZoneHelper</label>
</ListView>